# milvus

./: .gitignore  CMakeLists.txt  default.nix  shell.nix  start_server.sh
core/: CMakeLists.txt  build.sh
core/cmake/: ThirdPartyPackages.cmake
core/src/: CMakeLists.txt  main.cpp
core/src/db/: Constants.h  DB.h  DBImpl.cpp  DBImpl.h  Options.h  Types.h  Utils.cpp
core/src/db/engine/: EngineFactory.cpp  EngineFactory.h  ExecutionEngine.h  ExecutionEngineImpl.cpp  ExecutionEngineImpl.h
core/src/db/meta/: Meta.h  MetaTypes.h  MySQLMetaImpl.cpp  MySQLMetaImpl.h  SqliteMetaImpl.cpp  SqliteMetaImpl.h
core/src/grpc/gen-milvus/: milvus.grpc.pb.h
core/src/index/cmake/: ThirdPartyPackagesCore.cmake
core/src/index/knowhere/: CMakeLists.txt
core/src/index/knowhere/knowhere/adapter/: SptagAdapter.cpp
core/src/index/knowhere/knowhere/common/: BinarySet.h  Config.h
core/src/index/knowhere/knowhere/index/vector_index/: FaissBaseIndex.cpp  FaissBaseIndex.h  IndexBinaryIDMAP.h  IndexBinaryIVF.h  IndexGPUIDMAP.cpp  IndexGPUIDMAP.h  IndexGPUIVF.cpp  IndexGPUIVF.h  IndexHNSW.h  IndexIDMAP.cpp  IndexIDMAP.h  IndexIVF.cpp  IndexIVF.h  IndexNSG.h  IndexSPTAG.cpp  IndexSPTAG.h  (+1 more)
core/src/index/unittest/: CMakeLists.txt  test_gpuresource.cpp  test_idmap.cpp  test_ivf.cpp
core/src/index/unittest/faiss_benchmark/: CMakeLists.txt
core/src/index/unittest/faiss_ori/: CMakeLists.txt
core/src/scheduler/: Algorithm.cpp  CircleQueue.h  SchedInst.cpp  SchedInst.h
core/src/scheduler/job/: BuildIndexJob.cpp  ClusterizeJob.cpp  ClusterizeJob.h
core/src/scheduler/optimizer/: ClusterizePass.cpp  ClusterizePass.h  FaissFlatPass.cpp  FaissIVFFlatPass.cpp
core/src/scheduler/task/: BuildIndexTask.cpp  ClusterizeTask.h  SearchTask.cpp  Task.h
core/src/server/: Config.cpp  Server.cpp
core/src/server/0mq_impl/: 0mqServer.cpp  0mqServer.h  cbor_utils.hpp
core/src/server/delivery/: RequestHandler.cpp  RequestHandler.h
core/src/server/delivery/request/: ClusterizeRequest.h  CompareFragmentsRequest.h  CreateIndexRequest.cpp  CreateIndexRequest.h  CreateTableRequest.cpp  CreateTableRequest.h  GetVectorsRequest.cpp  GetVectorsRequest.h  SearchRequest.cpp  SearchRequest.h
core/src/server/grpc_impl/: GrpcRequestHandler.cpp
core/src/server/grpc_impl/interceptor/: GrpcInterceptorHookHandler.h  SpanInterceptor.h
core/src/server/web_impl/handler/: WebRequestHandler.cpp
core/src/tracing/: TracerUtil.cpp
core/src/utils/: ValidationUtil.cpp
core/src/wrapper/: ConfAdapter.cpp  ConfAdapterMgr.cpp  KnowhereResource.cpp  VecImpl.cpp  VecImpl.h  VecIndex.cpp  VecIndex.h
core/unittest/: CMakeLists.txt
core/unittest/db/: CMakeLists.txt  test_db.cpp  test_engine.cpp  utils.cpp
core/unittest/scheduler/: test_scheduler.cpp
core/unittest/server/: CMakeLists.txt  test_cache.cpp
etc/: log_config.conf  server.config
sdk/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  cmake_install.cmake  indexer.cpp  vec_indexer_server.cpp  version.h
src/cache/: CMakeLists.txt  CpuCacheMgr.cpp  GpuCacheMgr.cpp  Makefile  cmake_install.cmake
src/config/: CMakeLists.txt  Makefile  cmake_install.cmake
src/db/: CMakeLists.txt  Constants.h  DB.h  DBFactory.cpp  DBImpl.cpp  DBImpl.h  Makefile  Options.h  Types.h  Utils.cpp  cmake_install.cmake
src/db/engine/: CMakeLists.txt  ExecutionEngineImpl.cpp  Makefile  cmake_install.cmake
src/db/insert/: CMakeLists.txt  Makefile  MemManagerImpl.h  MemTableFile.cpp  cmake_install.cmake
src/db/meta/: CMakeLists.txt  Meta.h  MetaFactory.cpp  MetaTypes.h  SqliteMetaImpl.cpp
src/knowhere/: CMakeLists.txt  Makefile  cmake_install.cmake
src/knowhere/adapter/: CMakeLists.txt  Makefile  cmake_install.cmake
src/knowhere/common/: CMakeLists.txt  Makefile  cmake_install.cmake
src/knowhere/index/vector_index/: CMakeLists.txt  FaissBaseIndex.cpp  IndexBinaryIDMAP.cpp  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexGPUIDMAP.cpp  IndexGPUIVF.cpp  IndexGPUIVF.h  IndexIVF.cpp  IndexIVF.h  IndexIVFSQHybrid.cpp  IndexNSG.cpp  Makefile  cmake_install.cmake
src/knowhere/index/vector_index/helpers/: CMakeLists.txt  Cloner.cpp  Cloner.h  FaissGpuResourceMgr.h  FaissIO.cpp  IndexParameter.cpp  Makefile  cmake_install.cmake
src/metrics/: CMakeLists.txt  Makefile  Metrics.cpp  SystemInfo.cpp  cmake_install.cmake
src/scheduler/: CMakeLists.txt  JobMgr.cpp  Makefile  SchedInst.cpp  SchedInst.h  TaskCreator.cpp  TaskCreator.h  cmake_install.cmake
src/scheduler/action/: CMakeLists.txt  Makefile  PushTaskToNeighbour.cpp  cmake_install.cmake
src/scheduler/job/: BuildIndexJob.h  CMakeLists.txt  Job.h  Makefile  cmake_install.cmake
src/scheduler/optimizer/: BuildIndexPass.cpp  CMakeLists.txt  ClusterizePass.cpp  FaissFlatPass.cpp  FaissIVFFlatPass.cpp  FaissIVFPQPass.cpp  FaissIVFSQ8HPass.cpp  FaissIVFSQ8Pass.cpp  Makefile  cmake_install.cmake
src/scheduler/resource/: CMakeLists.txt  Makefile  cmake_install.cmake
src/scheduler/task/: BuildIndexTask.cpp  CMakeLists.txt  ClusterizeTask.cpp  Makefile  cmake_install.cmake
src/server/: CMakeLists.txt  DBWrapper.cpp  Makefile  cmake_install.cmake  config.cpp  server.cpp  server.h
src/server/0mq/: 0mqServer.h  CMakeLists.txt  Makefile  cbor_utils.hpp  cmake_install.cmake
src/server/context/: CMakeLists.txt
src/server/delivery/: CMakeLists.txt  Makefile  RequestHandler.cpp  RequestHandler.h  cmake_install.cmake
src/server/delivery/request/: BaseRequest.h  CMakeLists.txt  ClusterizeRequest.cpp  CompareFragmentsRequest.cpp  CreateIndexRequest.cpp  GetVectorsRequest.h  Makefile  cmake_install.cmake
src/storage/: CMakeLists.txt  Makefile  cmake_install.cmake
src/tracing/: CMakeLists.txt  Makefile  cmake_install.cmake
src/utils/: CMakeLists.txt  CommonUtil.cpp  Error.h  LogUtil.h  Makefile  SignalUtil.cpp  SignalUtil.h  Status.h  TimeRecorder.h  ValidationUtil.cpp  cmake_install.cmake
src/wrapper/: CMakeLists.txt  ConfAdapter.cpp  KnowhereResource.cpp  Makefile  VecIndex.cpp  cmake_install.cmake
src/wrapper/gpu/: GPUVecImpl.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  simple_test.cpp
(+2 files in other folders)
